[package]
name = "mingshi"
version = "0.1.1"
edition = "2024"
authors = ["Servus Altissimi"]
description = "Real-time music synthesizer and composition engine with dynamic playback control, advanced audio effects, and optional GPU-accelerated synthesis via WGPU. Designed for on the fly compositing."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Servus-Altissimi/MingShi"
keywords = ["audio", "music", "synthesizer", "gpu", "web"]
categories = ["multimedia::audio"]
exclude = [
    "target/*",
    ".gitignore",
]

[features]
default = []
gpu = ["dep:wgpu", "dep:bytemuck", "dep:futures-channel"]

[dependencies]
cpal     = "0.16"
fastrand = "2.3.0"
hound    = "3.5.1"
wgpu   	 = { version = "29", optional = true }
bytemuck = { version = "1",  features = ["derive"], optional = true }
futures-channel = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[lib]
name = "mingshi"
path = "src/lib.rs"

